Fix use of incorrect variable, and harmless but valgrind-noisy use of variables in incorrect order.  (Bug 455093)